# rust_game_of_life

./: Cargo.toml
src/: app.rs  main.rs
