[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal = "0.2.1"
array2d = "0.2.1"
rand = "0.8.4"
eframe = "0.15.0"

[features]
default = ["terminal/crossterm-backend"]